...
            ) {
                SimpleHeader("Set Matchmaking Preferences")
                Preferences(
                    Modifier.weight(1F, true), gamesList.value, selectedLanguage,
                    selectedRegion, selectedTimezone, selectedSkillLevel, selectedGame
                )
                PreferenceFooter(canConfirm, "SetMatchmakingConfirm"){
                    lifecycleScope.launch {
                        val preferences = com.example.gameon.classes.Preferences(
                            preferenceId.value, selectedLanguage.value ?: "",
                            selectedTimezone.value ?: "", selectedSkillLevel.value ?: "",
                            discordId, game_id = selectedGame.value?.game_id ?: 0
                        )
...
